syntax = "proto3";
package taxis.service;

message NewTaxiPresentation{
  int32 id = 1;
  string hostname = 2;
  int32 port = 3;
  int32 currX = 4;
  int32 currY = 5;
}

message OldTaxiPresentation{
  int32 currX = 1;
  int32 currY = 2;
}


//-------------------------------



message RechargeStationRequest{
  int32 id = 1;
  double timestamp = 2;

  enum District{
    DISTRICT_ERROR = 0;
    DISTRICT1 = 1;
    DISTRICT2 = 2;
    DISTRICT3 = 3;
    DISTRICT4 = 4;
  }

  District district = 3;
}

message RechargeStationReply{
  bool ok = 1;
}

//---------------------------


message TaxiCoordinationRequest{
  int32 idRideRequest = 1;  //the request I'd like to satisfy
  int32 x = 2;
  int32 y = 3;  //these are my current coordinates
  int32 batteryLevel = 4;   //this is my current battery level
  int32 taxiId = 5;         //this is my id as a taxi
}

message TaxiCoordinationReply{
  bool ok = 1;  //true = ok, you can have this ride, 0 = no, you can't satisfy this ride
}

service MiscTaxiService{
  rpc welcomeImANewTaxi(NewTaxiPresentation) returns (OldTaxiPresentation);

  rpc mayIRecharge(RechargeStationRequest) returns (RechargeStationReply);

  rpc mayITakeCareOfThisRequest(TaxiCoordinationRequest) returns (TaxiCoordinationReply);
}



